2009-03-18  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes for NB#101613 

	* src/home/hd-render-manager.c: Made sure blur_Front is not raised to
	the top of front - allowing notifications to be seen properly.
	* src/home/hd-render-manager.h
	* src/mb/hd-comp-mgr.c: moved hard-coded state to the top of HDRM like
	we have for other states

2009-03-18  Gordon Williams <gordon.williams@collabora.co.uk>

	* data/transitions.ini: Speeded up transitions even more

2009-03-18  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-page.h: Commented enums
	* src/home/hd-home-view-container.c: Fix for NB#106484, allowing
	background image to move even when blurred
	* src/util/hd-transition.c: Modified close animation to shrink
	more vertically before it starts to shrink horizontally

2009-03-18  Alejandro Pinheiro <apinheiro@igalia.com>

	* debian/rules: set a11y suppport compilation as the default one
	* src/a11y/hildon-desktop-a11y.c: use the environment variable
	ENABLE_HILDON_DESKTOP_A11Y in order to check in runtime if it is
	needed to init the a11y support

2009-03-18  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed default application icon name to the correct spelling.
	Fixes: NB#106105.

	* src/launcher/hd-launcher.h:

2009-03-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.26

2009-03-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h: Fix for bugs NB#105855 and NB#106022,
	both related to what is blurred/visible in home edit mode.
	* src/mb/hd-comp-mgr.c: Fixed regression caused by misplaced assert

2009-03-17  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Use the lowmem signal to determine whether we can launch new
	applications.
	Fixes: NB#106339

	* src/launcher/hd-app-mgr.c:

2009-03-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c: Changes to unregister_client so that an