@@ -130,8 +130,6 @@ src/a11y/launcher/Makefile
 src/a11y/home/Makefile
 src/a11y/tail/Makefile
 data/Makefile
-data/icons/Makefile
-data/icons/48x48/Makefile
 data/desktop/Makefile
 tests/Makefile
 ])
