@@ -1,6 +1,7 @@
-SUBDIRS = icons desktop
+SUBDIRS = desktop
 
 resdir = $(datadir)/hildon-desktop
 res_DATA = \
+	qgn_home_close.png \
 	white-particle.png \
 	transitions.ini
