@@ -1,7 +1,0 @@
-icondir = $(datadir)/icons/hicolor/48x48/apps
-icon_DATA = \
-	qgn_tswitcher_back.png \
-	qgn_home_close.png
-
-EXTRA_DIST = $(icon_DATA)
-
